--- a/docker/tool-box/Dockerfile
+++ b/docker/tool-box/Dockerfile
@@ -15,6 +15,9 @@ RUN dnf -y update && \
     unzip /tmp/hoverfly.zip -d /tmp/hoverfly && \
     mv /tmp/hoverfly/hoverctl /usr/bin && \
     rm -r /tmp/hoverfly /tmp/hoverfly.zip && \
+    hoverctl completion -f && \
+    hoverctl targets create ocp-same-project --host http://hoverfly && \
+    hoverctl targets default ocp-same-project && \
     mkdir -m 775 $HOME && \
     chmod 775 /etc/passwd
     
