--- a/params/jenkins/build
+++ b/params/jenkins/build
@@ -1,4 +1,4 @@
-SOURCE_REPOSITORY_URL=https://github.com/rht-labs/labs-ci-cd.git
+SOURCE_REPOSITORY_URL=https://github.com/sherl0cks/labs-ci-cd.git
 NAME=jenkins
-SOURCE_REPOSITORY_REF=master
+SOURCE_REPOSITORY_REF=jenkins-42276-recreate
 SOURCE_REPOSITORY_CONTEXT_DIR=s2i-config/jenkins-master
