--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -116,7 +116,7 @@ openshift_cluster_content:
 - object: ci-for-labs-ci-cd
   content:
   - name: pipeline
-    template: "{{ inventory_dir }}/../openshift-templates/jenkins-pipeline-no-ocp-triggers"
+    template: "{{ inventory_dir }}/../openshift-templates/jenkins-pipeline-no-ocp-triggers/template.yaml"
     params: "{{ inventory_dir }}/../params/ci-for-labs-ci-cd/build"
     namespace: labs-ci-cd
     tags:
