--- a/galaxy_requirements.yml
+++ b/galaxy_requirements.yml
@@ -4,5 +4,5 @@
 # dependencies to support this inventory
 
 # From 'rht-labs/labs-ci-cd'
-- src: https://github.com/sherl0cks/labs-ci-cd
-  version: nexus-repos
+- src: https://github.com/rht-labs/labs-ci-cd
+  version: master
