--- a/unique-projects-playbook.yaml
+++ b/unique-projects-playbook.yaml
@@ -7,5 +7,5 @@
       - regexp: '^(NAMESPACE_DISPLAY_NAME)=((?!.*\({{ project_name_postfix }}\)))(.*)$'
         replace: '\1=\3 ({{ project_name_postfix }})'  
   roles:
-    - make-projects-unique
+    - casl-ansible/roles/make-applier-projects-unique
     - casl-ansible/roles/openshift-applier
